corpus/extracted_from_hledger.txt
==================
1__simple_alias_directive
==================

alias checking = assets:bank:checking
1/1
    (checking:a)  1

---

(source_file
  (alias_directive)
  (transaction
    (entry
      (date
        (month)
        (day)))
    (posting
      (account)
      (amount
        (quantity)))))

==================
2__simple_alias_matches_whole_account_name_components_only
==================

alias a:b = A:B
1/1
    (a:b:c)   1  ; should match this
1/1
    (a:bb:d)  1  ; should not match this

---

(source_file)

==================
3__a_simple_alias_matching_the_whole_account_name_works
==================

alias a:b = A:B
1/1
    (a:b)   1

---

(source_file)

==================
4__regex_alias_directive
==================

alias /^(.+):bank:([^:]+):?(.*)/ = \1:\2 \3
1/1
    (assets:bank:B:checking:a)  1

---

(source_file)

==================
test_12
==================

alias /a/ = b
2011/01/01
    A a  1
    a a  2
    c
alias /A (.)/=\1
2011/01/01
    A a  1
    a a  2
    c

---

(source_file)

==================
test_16
==================

2011/01/01
    a a  1
    A a  2
    c

---

(source_file)

==================
7__alias_options_are_applied_after_alias_directives_
==================

alias /^a/=B
alias /^a/=E
alias E=F
2011/01/01
    [a:x]    1
    [x:a:x]

---

(source_file)

==================
8__alias_options
==================

01/01 Opening balances
	(bank)         100
	(credit-card)  -10
01/02
	expenses  5
	cc
01/03
	expenses  5
	b
01/04 Credit card charge
	cc  = 0
    b
01/05
	expenses  5
	b         = 75

---

(source_file)

==================
9__query_will_search_both_origin_and_substitution_in_alias
==================

alias a = b
2017/1/1
    a  1
    b  -1

---

(source_file)

==================
10__recursive_command_line_simple_aliases_
==================

2000/01/01
  (one)  1

---

(source_file)

==================
test_23
==================

alias two = three
alias one = two
2000/01/01
  (one)  1

---

(source_file)

==================
12__only_one_of_these_is_applied_
==================

alias one = three
alias one = two
2000/01/01
  (one)  1

---

(source_file)

==================
13__recursive_command_line_regexp_aliases_
==================

2000/01/01
  (one)  1

---

(source_file)

==================
test_27
==================

alias /two/ = three
alias /one/ = two
2000/01/01
  (one)  1

---

(source_file)

==================
15__only_one_of_these_is_applied_
==================

alias /one/ = three
alias /one/ = two
2000/01/01
  (one)  1

---

(source_file)

==================
16__for_example__you_can_erase_an_account_name_
==================

alias /a:.*/=
2021-01-01
  a:aa     1
  b

---

(source_file)

==================
test_32
==================

2021-01-01
  old    1
  other

---

(source_file)

==================
18__make_sure_you_can_match_forward_slashes_in_regexps_by_escaping_them____982_
==================

alias /\// = :
2021-01-01
  hi/there    1
  b

---

(source_file)

==================
19__make_sure_you_can_escape_special_regexp_characters_
==================

alias /\./ = :
2021-01-01
  hi.there    1
  b

---

(source_file)

==================
20__including_backslashes
==================

alias /\\/ = :
2021-01-01
  hi\there    1
  b

---

(source_file)

==================
test_3
==================

2018/1/1
  (b:j)  1
2018/1/1
  (c)    1
2018/1/1
  (b:i)  1
2018/1/1
  (a:k)  1

---

(source_file)

==================
test_9
==================

account b:k
account b:j
account d
2018/1/1
  (a:l)  1
2018/1/1
  (b:i)  1
2018/1/1
  (b:j)  1
2018/1/1
  (b:k)  1
2018/1/1
  (c)    1
2018/1/1
  (d)    1

---

(source_file)

==================
1__basic_accounts_report
==================

account a
2018/1/1  ; foo:
  (a:aa)  1

---

(source_file)

==================
6__show_account_types_
==================

account asset
2022-01-01
  (unknown)  1

---

(source_file)

==================
7__equity_conversion__and_several_other_names__are_detected_as_v_conversion_type_by_default_
==================

account equity:conversion
account equity:trade
account equity:trades
account equity:trading

---

(source_file)

==================
8__if_any_other_account_name_is_declared_with_v_type__those_default_names_become_just_ordinary_equity_accounts_
==================

account trade  ; type: V
account equity:conversion
account equity:trade
account equity:trades
account equity:trading

---

(source_file)

==================
9____infer_equity_uses_equity_conversion_as_its_base_account_by_default_
==================

2024-01-01
  a    1A
  b   -1B

---

(source_file)

==================
10__with_a_custom_conversion_account_declared____infer_equity_uses_that_instead_
==================

account trade  ; type:V
2024-01-01
  a    1A
  b   -1B

---

(source_file)

==================
1__activity_report_is_daily_by_default_
==================

2023-01-01
  (a)  1
2023-01-06
  (a)  1

---

(source_file)

==================
2__a_weekly_activity_report_
==================

2023-01-01
  (a)  1
2023-01-06
  (a)  1

---

(source_file)

==================
2__a_7_day_activity_report_starting_on_an_date_
==================

2023-01-01
  (a)  1
2023-01-06
  (a)  1

---

(source_file)

==================
1__should_prompt_again_for_a_bad_date
==================

2009/1/32

---

(source_file)

==================
3__simple_add_with_no_existing_journal__no_commodity_entered
==================

a
1000.0
b
.

---

(source_file)

==================
4__default_commodity_with_greater_precision_does_not_alter_entered_precision
==================

a
A1000.0
b
.

---

(source_file)

==================
5__default_commodity_with_less_precision_does_not_alter_entered_precision
==================

a
A1000.00
b
.

---

(source_file)

==================
6__default_commodity_symbol_is_not_added_when_not_provided___815_
==================

a
1000
b
.

---

(source_file)

==================
7__existing_commodity_with_greater_precision
==================

a
A1000.0
b
.

---

(source_file)

==================
8__existing_commodity_with_less_precision
==================

a
A1000.00
b
.

---

(source_file)

==================
9__default_amounts_should_not_fail_to_balance_due_to_precision
==================

2010/1/1
x
a
0.25
b
0.5
c

---

(source_file)

==================
test_13
==================

#
#

---

(source_file)

==================
1__print
==================

2010/1/1
    a  EUR 1  ; a euro
    b  USD 1  ; a dollar
    c         ; a euro and a dollar

---

(source_file)

==================
2__register
==================

2010/1/1
    a  EUR 1  ; a euro
    b  USD 1  ; a dollar
    c         ; a euro and a dollar

---

(source_file)

==================
3__balance
==================

2010/1/1
    a  EUR 1  ; a euro
    b  USD 1  ; a dollar
    c         ; a euro and a dollar

---

(source_file)

==================
4__a_single_commodity_zero_amount_s_commodity_decimal_places_price_is_preserved__when_possible
==================

2010/3/1 x
  a  $0.00 @ 3EUR
  b

---

(source_file)

==================
test_9
==================

D 1000,00€
1/1
      a:b         0
1/2
      a:1      4000,58
      a:D     -1000,58
      e       -3000

---

(source_file)

==================
aregister_command
==================

2021-01-01
  (b)  1
2021-01-02
  a   1
  b  -1

---

(source_file)

==================
1__aregister_only_shows_transactions_matching_the_account_query__and_displays_other_accounts_involved
==================

2023-01-01
    assets:checking   1
    income:salary    -1
2023-01-02
    assets:checking  -2
    expenses:food     2

---

(source_file)

==================
test_11
==================

~ 2021-01-03  sixth, because forecast transactions come after normal transactions
    (a)           6
2021-01-03 fifth
    (a)           5
2021-01-02 third
    (a)           3
2021-01-02 fourth, because same day is in parse order
    (a)           4
2021-01-01 first
    (a)           1
2021-01-03 second, because of posting date
    (a)           2  ; date:2021-01-01
2021-01-04 seventh, because posting date is not matching
    (a)           7
    (b)           0  ; date:2021-01-01

---

(source_file)

==================
test_13
==================

2021-01-01=2021-02-02
  (a)   1

---

(source_file)

==================
test_1
==================

commodity A1,000.0
2024-04-25
   (revenues)    A 1000.12

---

(source_file)

==================
test_3
==================

2015-01-01
  1                                          1
  1:2                                       -1
2015-01-02
  1:2:3                                      1
  1:2:3:4                                   -1
2015-01-03
  1:2:3:4:5                                  1
  1                                         -1

---

(source_file)

==================
1__hledger_should_give_this_balance_
==================

1/1
    a  -553.653 X @@ 2609.92
    a    -5.684 X @@ 26.10
    a   -50.833 X @@ 234.90
    a   -49.714 X @@ 234.90
    a   -49.957 X @@ 234.90
    a   -49.778 X @@ 234.90
    a  -142.316 X @@ 674.01
    a   -49.029 X @@ 234.90
    a   -51.233 X @@ 234.90
    a   -49.204 X @@ 234.90
    a   -49.474 X @@ 234.90
    a   -47.773 X @@ 234.90
    a  -109.439 X @@ 576.96
    a   -31.133 X @@ 171.51
    a  -438.249 X @@ 2537.90
    a   -11.927 X @@ 72.03
    a  -170.721 X @@ 990.18
    a  1910.117 X @@ 10742.52
    b
>>>
             -969.81  b
>>>= 0

---

(source_file)

==================
2__as_above__but_the_prices_have_a_commodity___should_work_the_same_
==================

1/1
    a  -553.653 X @@ 2609.92 Y
    a    -5.684 X @@ 26.10 Y
    a   -50.833 X @@ 234.90 Y
    a   -49.714 X @@ 234.90 Y
    a   -49.957 X @@ 234.90 Y
    a   -49.778 X @@ 234.90 Y
    a  -142.316 X @@ 674.01 Y
    a   -49.029 X @@ 234.90 Y
    a   -51.233 X @@ 234.90 Y
    a   -49.204 X @@ 234.90 Y
    a   -49.474 X @@ 234.90 Y
    a   -47.773 X @@ 234.90 Y
    a  -109.439 X @@ 576.96 Y
    a   -31.133 X @@ 171.51 Y
    a  -438.249 X @@ 2537.90 Y
    a   -11.927 X @@ 72.03 Y
    a  -170.721 X @@ 990.18 Y
    a  1910.117 X @@ 10742.52 Y
    b
>>>
           -969.81 Y  b
>>>= 0

---

(source_file)

==================
3__period_reporting_works_for_a_specific_year
==================

2015/10/10 Client A | Invoice #1
    assets:receivables      $10,000.00
    revenue:clients:A      -$10,000.00
2015/11/02 Deposit | Invoice #1
    assets:checking         $10,000.00
    assets:receivables     -$10,000.00
2016/02/01 Client B | Invoice #2
    assets:receivables          $10.00
    revenue:clients:B          -$10.00
2016/02/15 ACME | Hosting Costs
    expense:hosting             $50.00
    assets:checking            -$50.00
2016/03/01 Deposit | Invoice #2
    assets:checking             $10.00
    assets:receivables         -$10.00

---

(source_file)

==================
4__period_reporting_works_for_two_years
==================

2015/10/10 Client A | Invoice #1
    assets:receivables      $10,000.00
    revenue:clients:A      -$10,000.00
2015/11/02 Deposit | Invoice #1
    assets:checking         $10,000.00
    assets:receivables     -$10,000.00
2016/02/01 Client B | Invoice #2
    assets:receivables          $10.00
    revenue:clients:B          -$10.00
2016/02/15 ACME | Hosting Costs
    expense:hosting             $50.00
    assets:checking            -$50.00
2016/03/01 Deposit | Invoice #2
    assets:checking             $10.00
    assets:receivables         -$10.00

---

(source_file)

==================
5__period_reporting_works_for_one_month
==================

2015/10/10 Client A | Invoice #1
    assets:receivables      $10,000.00
    revenue:clients:A      -$10,000.00
2015/11/02 Deposit | Invoice #1
    assets:checking         $10,000.00
    assets:receivables     -$10,000.00
2016/02/01 Client B | Invoice #2
    assets:receivables          $10.00
    revenue:clients:B          -$10.00
2016/02/15 ACME | Hosting Costs
    expense:hosting             $50.00
    assets:checking            -$50.00
2016/03/01 Deposit | Invoice #2
    assets:checking             $10.00
    assets:receivables         -$10.00

---

(source_file)

==================
6__period_reporting_works_for_one_month_in_another_year
==================

2015/10/10 Client A | Invoice #1
    assets:receivables      $10,000.00
    revenue:clients:A      -$10,000.00
2015/11/02 Deposit | Invoice #1
    assets:checking         $10,000.00
    assets:receivables     -$10,000.00
2016/02/01 Client B | Invoice #2
    assets:receivables          $10.00
    revenue:clients:B          -$10.00
2016/02/15 ACME | Hosting Costs
    expense:hosting             $50.00
    assets:checking            -$50.00
2016/03/01 Deposit | Invoice #2
    assets:checking             $10.00
    assets:receivables         -$10.00

---

(source_file)

==================
7__default_csv_output_
==================

2021-01-01 Test
    Assets:ABC   "AB.C" 1
    Assets:Cash       -$1

---

(source_file)

==================
8__csv_output_in_tree_mode_
==================

2021-01-01 Test
    Assets:ABC   "AB.C" 1
    Assets:Cash       -$1

---

(source_file)

==================
9__csv_output_always_does_not_show_thousands_separators
==================

2021-01-01 Test
    Assets:ABC    $10 000.00
    Assets:Cash  -$10 000.00

---

(source_file)

==================
test_13
==================

account a
account a:aa
account a:ab
account a:ac:aca
account b

---

(source_file)

==================
11__in_list_mode_we_can_see_that_non_leaf_declared_accounts_are_excluded_
==================

account a
account a:aa
account a:ab
account a:ac:aca
account b

---

(source_file)

==================
12__not_acct_queries_work_with_declared_accounts_
==================

account a
account a:aa
account a:ab
account a:ac:aca
account b

---

(source_file)

==================
15____count_counts_postings_
==================

2023-01-01
  a      10
  a:aa   20
  b

---

(source_file)

==================
test_3
==================

~ daily from 2016/1/1
    expenses:food     $10
    expenses:leisure  $15
    assets:cash
2016/12/01
    expenses:food  $10
    assets:cash
2016/12/02
    expenses:food  $9
    assets:cash
2016/12/03
    expenses:food  $11
    assets:cash
2016/12/02
    expenses:leisure  $5
    assets:cash
2016/12/03
    expenses:movies  $25
    assets:cash
2016/12/03
    expenses:cab  $15
    assets:cash

---

(source_file)

==================
test_6
==================

2016/12/01
    expenses:food  £10 @@ $15
    assets:cash
2016/12/02
    expenses:food  10 CAD @ $1
    assets:cash
2016/12/02
    expenses:food  10 CAD @ $1.1
    assets:cash
2016/12/03
    expenses:food  $11
    assets:cash
2016/12/02
    expenses:leisure  $5
    assets:cash
2016/12/03
    expenses:movies  $25
    assets:cash
2016/12/03
    expenses:cab  $15
    assets:cash
~ daily from 2016/1/1
    expenses:food     $10
    expenses:leisure  $15
    assets:cash

---

(source_file)

==================
test_8
==================

~ daily
  (a)  10
~weekly
  (b)  100
~weekly
  (c)  1000
2018/1/1
  (a)  1
  (b)  1
  (c)  1
2018/1/3
  (a)  1
  (b)  1
  (c)  1

---

(source_file)

==================
7__a_bounded_two_day_budget__the_end_date_is_exclusive_as_usual_
==================

~ daily from 2018/1/2 to 2018/1/4
  (a)  1
2018/1/1
  (a)  1
  (b)  1
2018/1/2
  (a)  1
  (b)  1
2018/1/3
  (a)  1
  (b)  1
2018/1/4
  (a)  1
  (b)  1

---

(source_file)

==================
8__multiple_bounded_budgets_
==================

~ daily from 2018/1/1 to 2018/1/3
  (a)  1
~ daily from 2018/1/3 to 2018/1/5
  (a)  10
2018/1/1
  (a)  1
2018/1/2
  (a)  1
2018/1/3
  (a)  1
2018/1/4
  (a)  1

---

(source_file)

==================
9__a__from_a_to_b__budget_should_not_be_included_in_a_report_beginning_on_b_
==================

~ daily
  (a)  1
2018/1/2
  (a)  2
2018/1/2
  (a)  -2

---

(source_file)

==================
12__subaccounts_of_budgeted_accounts_count_towards_budget
==================

~ daily
  (a)      1
2018/1/1
  (a:b)    1

---

(source_file)

==================
13__budget_goals_on_both_parent_and_subaccounts_are_counted
==================

~ daily
  (a)        100
  (a:b:c)      1
2018/1/1
  (a)          1
  (a:b:c)      1

---

(source_file)

==================
15__respect___value
==================

P 2018/01/26 SHARE €10
2018/05/17 Dividend
    revenue:dividend       €-10
    assets:pension          €10
2018/05/17 Buy
    assets:pension:shares   1 SHARE @ €10
    assets:pension          €-10
~ monthly from 2018/06 to 2018/07
    assets:pension                    €1
    assets:bank

---

(source_file)

==================
16__with_subaccounts__child_accounts_are_properly_included_in_the_parent_balance_when_budget_is_checked
==================

~ monthly from 2019/01
    expenses:personal             $1000.00
    liabilities
2019/01/01 Google home hub and home mini x2
    expenses:personal:electronics          $10.00
    liabilities                           $-10.00
2019/01/02 Google Home Hub Permium Subscription
    expenses:personal:electronics:upgrades          $10.00
    liabilities                           $-10.00
2019/01/03 Something else
    expenses:personal          $30.00
    liabilities                           $-30.00

---

(source_file)

==================
22__subaccounts___nested_budgets
==================

~ monthly from 2019/01
    expenses:personal             $1000.00
    expenses:personal:electronics  $100.00
    liabilities
2019/01/01 Google home hub and home mini x2
    expenses:personal:electronics          $10.00
    liabilities                           $-10.00
2019/01/02 Google Home Hub Permium Subscription
    expenses:personal:electronics:upgrades          $10.00
    liabilities                           $-10.00
2019/01/03 Something else
    expenses:personal          $30.00
    liabilities                           $-30.00

---

(source_file)

==================
26__zero_budget____no_budget
==================

~ monthly from 2019-01
  expenses:bills     $100  ; bills has a $100 budget of its own, separate from subaccounts
  expenses:bills:a    $20  ; a has non-zero budget and non-zero posted amount
  expenses:bills:b   $200  ; b's budget is larger than bills'; we can see it's added to, not part of, that
  expenses:bills:c    $50  ; c has a budget but no postings
  expenses:bills:f     $0  ; f has an explicit zero budget
  income:cash              ; cash has a negative $370 budget balancing the above
2019-01-01 transaction1
  income:cash
  expenses:bills:a    $10
  expenses:bills:b    $40
  expenses:bills:d    $20  ; d has postings but no budget
  expenses:bills:e    $10  ; e has postings summing to zero, and no budget
  expenses:bills:f    $10
2019-01-02 transaction2
  income:cash
  expenses:bills:e    -$10

---

(source_file)

==================
test_49
==================

~ monthly in 2020
  (expenses:food)  $500
2020-01-15
  expenses:food    $400
  assets:checking
2020-03-15
  expenses:food    $600
  assets:checking

---

(source_file)

==================
33__34__select_from_multiple_named_budgets_
==================

~ weekly   weekly budget
  (aaa)   1
~ monthly  monthly budget
  (bbb)   10

---

(source_file)

==================
35__cumulative_budget_report_
==================

~ monthly
  (a)  10
2022-01-05
  (a)   10
2022-02-03
  (a)   5

---

(source_file)

==================
37__historical_budget_report_where_the_periodic_transaction_has_date_bounds_
==================

~ every february 2nd from 2020/01
    (a)  1

---

(source_file)

==================
38__budget_report_applies_command_line_commodity_styles_to_goal_amounts___1905__
==================

~ daily
    (a)  1
2022-01-01
    (a)  1

---

(source_file)

==================
39__tall_budget_report_adds_per_column_zeroes_properly_
==================

2020-01-15
  (a)    A 100
2020-02-15
  (a)    A 200
  (b)    B 200

---

(source_file)

==================
test_58
==================

2023-07-01
    expenses:rent                  $100
    income:gifts:cash
~ monthly 2023-08
    (income:employment)           $-100
    (income:gifts:cash)           $-100

---

(source_file)

==================
balance_command_with___date2_flag
==================

2009/1/1 x
  a  1
  b
2009/1/1=2010/1/1 x
  a  10
  b

---

(source_file)

==================
1__drop_works_in_flat_mode
==================

2018/1/1
  (b:j)  1
2018/1/1
  (b:j:q)  1
2018/1/1
  (c)    1
2018/1/1
  (b:i:p)  1
2018/1/1
  (a:k)  1

---

(source_file)

==================
1_
==================

1/1
 (a:aa)       1
 (a:aa:aaa)   1
 (a:aa:bbb)   1
 (b)          1
 (b:bb:bbb)   1

---

(source_file)

==================
2_
==================

1/1
 (a:aa)       1
 (a:aa:aaa)   1
 (a:aa:bbb)   1
 (b)          1
 (b:bb:bbb)   1

---

(source_file)

==================
test_0
==================

2020-09-01 Test
    a  -500 AAA
    b

---

(source_file)

==================
3__with___empty__includes_leading_trailing_empty_periods
==================

2012/12/31
  (a)  10
2013/1/1
  (a)  1
2013/3/1
  (a)  1

---

(source_file)

==================
17____date2_should_work
==================

2014/1/1
 (a)  1
2014/2/1=2014/1/31
 (b)  1

---

(source_file)

==================
test_27
==================

2014/1/5
 (before report period)  1ew
2014/2/1
 (explicit report period)  10
2014/2/25
 (expanded report period)  100
2014/3/10
 (after report period)  1000

---

(source_file)

==================
15__multicolumn_balance_report_with___layout_bare_and_null_commodity
==================

2018/1/1
  (a)          1
  (a:b:c)      1
2018/1/2
  (a)          1 EUR

---

(source_file)

==================
17__multicolumn_budget_report_with___layout_bare___transpose_
==================

~ daily from 2016/1/1
    expenses:food     $10
    expenses:leisure  $15
    assets:cash
2016/12/01
    expenses:food  $10
    assets:cash
2016/12/02
    expenses:food  $9
    assets:cash
2016/12/03
    expenses:food  $11
    assets:cash
2016/12/02
    expenses:leisure  $5
    assets:cash
2016/12/03
    expenses:movies  $25
    assets:cash
2016/12/03
    expenses:cab  $15
    assets:cash

---

(source_file)

==================
23__should_omit_commodity_from_totals_row_when_the_sum_is_zero_with___layout_bare____1789_
==================

2021-01-01 Test
    Assets:Bank           INR 1.00
    Equity:Opening       INR -1.00

---

(source_file)

==================
balance_reports_with_multiple_commodities
==================

2020-01-01
  (a)  1.00A
  (a)  1.00B
  (a)  1.00C
  (a)  1.00D
2021-01-01
  (a)  1.00D
  (a)  1.00E
  (a)  1.00F

---

(source_file)

==================
4__display_elided_to_a_specific_width_if_requested
==================

2020-02-22
    26018c6e:ced6cffd:c3c182f1:7b433efb          $ 9.41
    ea50865f:3bfb86b7:bf72f75a:a7cad1ac        $ -10.00
    ea50865f:325566ed:216fec7e:7b433efb          $ 0.59
2020-02-27
    26018c6e:ced6cffd:c3c182f1:7b433efb        £ -19.16
    ea50865f:325566ed:216fec7e:7b433efb          £ 0.91
    ea50865f:325566ed:47134948                  £ 18.25
2020-04-12
    26018c6e:ced6cffd:c3c182f1:7b433efb          € 9.21
    ea50865f:3bfb86b7:bf72f75a:a7cad1ac        € -10.00
    ea50865f:325566ed:216fec7e:7b433efb          € 0.79
2020-05-16
    26018c6e:ced6cffd:c3c182f1:7b433efb        C$ 24.56
    ea50865f:3bfb86b7:bf72f75a:a7cad1ac       C$ -26.00
    ea50865f:325566ed:216fec7e:7b433efb         C$ 1.44

---

(source_file)

==================
balance_command___no_total_and___no_elide_flags
==================

2010/04/01 tr1
  a   16$
  b   -16$
2010/04/02 tr2
  a   -16$
  b   16$

---

(source_file)

==================
1__one_commodity__zero_accounts_should_be_elided_but_the_final_total_should_not_
==================

1/1
  (a:b)   1

---

(source_file)

==================
3__but_not_with___no_elide
==================

1/1
  (a:b)    1
  (a:c)   -1

---

(source_file)

==================
4__nor_when_it_has_more_than_one_subaccount
==================

2020/1/1
 (a)          1
 (a:aa)       1
 (a:aa)      -1
 (a:aa:aaa)   1
 (a:aa:aaa)  -1

---

(source_file)

==================
test_0
==================

1/1
  a   1.00
  b  -1

---

(source_file)

==================
default_sort__without_account_declarations
==================

2018/1/1
  (b:j)  1
2018/1/1
  (c)    1
2018/1/1
  (b:i)  1
2018/1/1
  (a:k)  1

---

(source_file)

==================
default_sort__with_account_declarations
==================

account b:k
account b:j
account d
2018/1/1
  (a:l)  1
2018/1/1
  (b:i)  1
2018/1/1
  (b:j)  1
2018/1/1
  (b:k)  1
2018/1/1
  (c)    1
2018/1/1
  (d)    1

---

(source_file)

==================
5__in_flat_mode_with__s__largest__most_positive__amounts_are_shown_first_
==================

2018/1/1
  (b:j)  2
2018/1/1
  (c)    1
2018/1/1
  (b:i)  1
2018/1/1
    (a:k)                                          1

---

(source_file)

==================
test_17
==================

2018/1/1
  (a)  2X @ 1Y
  (a)  2X @ 2Y
2018/1/1
  (b)  3X

---

(source_file)

==================
9___1279_in_hledger_1_11_1_18__bal__s_did_not_respect_the_hierarchy__should_work_now_
==================

2020-01-01
    (a:aa)                                         1
    (a:ab)                                         3
    (b)                                            2

---

(source_file)

==================
12___1283_most_negative_amounts_are_sorted_last__so_eg_largest_revenues_liabilities_are_last_
==================

2020-01-01
  (revenues:a)  -1
  (revenues:b)  -3
  (revenues:c)  -2

---

(source_file)

==================
14__or_a_sign_flipping_command_like_incomestatement_
==================

2021-01-01 Post in X
    (f)   1 X
2021-01-01 Post in X
    (b)  -1 X
2021-01-01 Post in X
    (e)   1 X
    (e)  -1 Y
2021-01-01 Post in Y
    (d)  -1 Y
2021-01-01 Post in X
    (c)  -1 X
2021-01-01 Post in X
    (a)  -1 X

---

(source_file)

==================
test_0
==================

2016/12/01
    expenses:food  $10
    assets:cash
2016/12/02
    expenses:food  $9
    assets:cash
2016/12/03
    expenses:food  $11
    assets:cash
2016/12/02
    expenses:leisure  $5
    assets:cash
2016/12/03
    expenses:movies  $25
    assets:cash
2016/12/03
    expenses:cab  $15
    assets:cash
~ daily from 2016/1/1
    expenses:food     $10
    expenses:leisure  $15
    assets:cash

---

(source_file)

==================
test_3
==================

2016/1/1
  assets  1
  b

---

(source_file)

==================
2__account_type_autodetection_is_case_insensitive_
==================

2016/1/1
  ASSETS  1
  b

---

(source_file)

==================
6__tree_output_still_works___565
==================

2017/1/1
  (assets:b)  1

---

(source_file)

==================
7__flat_output_still_works___552
==================

2017/1/1
  (assets:b)  1

---

(source_file)

==================
8__an_empty_section_does_not_disrupt_the_overall_totals___588
==================

2017/1/1
  (assets)  $1

---

(source_file)

==================
9__with___pretty__tables_use_box_drawing_characters_and_more_borders_
==================

2016/1/1
  assets  1
  b

---

(source_file)

==================
test_40
==================

2018-10-01
   income:whatever
   assets:bank      $100
   assets:bank:subaccount  $10
   assets:bank:this subaccount should disappear  $10
2018-10-02
   assets:bank:this subaccount should disappear  -$10
   assets:bank
2018-10-03
   assets:this account should not disappear:subaccount   -$10
   assets:this account should not disappear

---

(source_file)

==================
11__check_that_starting_balances_are_also_filtered_by_subreport_query___see_issue__1335_
==================

2020-03-01 * Rent
    assets:a     -$1
    expenses
2020-03-25 * Salary
    assets:a      $2
    income

---

(source_file)

==================
13__csv_output_supports___drop_
==================

2020-03-01 * Rent
    assets:a     -$10 000.00
    expenses

---

(source_file)

==================
test_48
==================

account assets:cash       ; type: Cash
account assets:checking   ; type: Asset
; ^ disables auto-detection of Asset type, "assets" will not be considered an Asset
2019-12-01
  (assets:cash)    3
2020-01-01
  (assets:cash)    2

---

(source_file)

==================
1_
==================

2016/1/1
  assets:cash  1
  b

---

(source_file)

==================
10__exclude_fixed_assets_from_cashflow
==================

2016/1/1
  assets:cash  1
  b
2016/1/1
  assets:fixed assets:equipment  1
  b

---

(source_file)

==================
1__check_accounts_succeeds_when_all_accounts_are_declared
==================

account a
2020-01-01
  (a)  1

---

(source_file)

==================
2__and_otherwise_fails_
==================

2020-01-01
  (a)  1

---

(source_file)

==================
3__also_fails_for_forecast_accounts
==================

commodity $
account a
~ 2022-01-31
    a  $1
    b

---

(source_file)

==================
5__also_fails_for_auto_accounts
==================

commodity $
account a
= a
  (b)    $1
2022-01-31
    (a)  $1
2022-02-01

---

(source_file)

==================
1__check_that_prices_balance_without_auto_inferring_prices
==================

2011/01/01 x
  a  -10£
  b  16$

---

(source_file)

==================
1__check_commodities_succeeds_when_all_commodities_are_declared
==================

commodity $1.
2020-01-01
  (a)  $1

---

(source_file)

==================
2__and_otherwise_fails
==================

2020-01-01
  (a)  $1

---

(source_file)

==================
3__but_commodityless_zero_amounts_will_not_fail
==================

2020-01-01
  (a)  0

---

(source_file)

==================
4__but_zero_amounts_with_undeclared_commodities_still_fail
==================

2020-01-01
  (a)  $0

---

(source_file)

==================
1__check_ordereddates_succeeds_when_transaction_dates_are_ordered
==================

2020-01-01
2020-01-01
2020-01-02

---

(source_file)

==================
2__and_otherwise_fails
==================

2020-01-01
2020-01-02
2020-01-01
  (a)  1

---

(source_file)

==================
3____date2_and_secondary_dates_are_ignored
==================

2020-01-02
2020-01-01=2020-01-03

---

(source_file)

==================
4__ordereddates_is_checked_before_balance_assertions__when_both_are_enabled
==================

2024-01-02
  (a)      1 = 9
2024-01-01
  (a)      1

---

(source_file)

==================
5__enabling_the_ordereddates_check_does_not_disable_the_balance_assertions_check
==================

2024-01-01
  (a)      1
2024-01-02
  (a)      1 = 9

---

(source_file)

==================
test_1
==================

payee foo
2020-01-01 foo
2020-01-02 foo | some description

---

(source_file)

==================
test_2
==================

2020-01-01 foo

---

(source_file)

==================
test_3
==================

payee foo
2020-01-01 the payee | foo

---

(source_file)

==================
1__tags_can_be_declared
==================

tag atag  ; this is atag. tags: on tags are not allowed and will be ignored.
  indented subdirectives are ignored.

---

(source_file)

==================
2__check_tags_succeeds_when_all_tags_are_declared
==================

tag atag
tag ttag
tag ptag
account a  ; atag:
2023-01-01 ; ttag:
  (a)  0   ; ptag:

---

(source_file)

==================
3__it_detects_an_undeclared_account_tag
==================

account a  ; atag:

---

(source_file)

==================
4__it_detects_an_undeclared_transaction_tag
==================

2023-01-01 ; ttag:

---

(source_file)

==================
5__it_detects_an_undeclared_posting_tag
==================

2023-01-01
  (a)  0   ; ptag:

---

(source_file)

==================
test_8
==================

2024-01-01
  ; date:
  ; date2:
  ; type:
  ; t:
  ; assert:
  ; retain:
  ; start:
  ; generated-transaction:
  ; modified-transaction:
  ; generated-posting:
  ; cost-posting:
  ; conversion-posting:
  ; _generated-transaction:
  ; _modified-transaction:
  ; _generated-posting:
  ; _cost-posting:
  ; _conversion-posting:

---

(source_file)

==================
test_10
==================

tag date                    ; overrides a posting's date
tag date2                   ; overrides a posting's secondary date
tag type                    ; declares an account's type
tag t                       ; generated by letters in timedot data (with the letter as tag value)
tag assert                  ; appears on txns generated by close --assert
tag retain                  ; appears on txns generated by close --retain
tag start                   ; appears on txns generated by close --migrate/--close/--open/--assign
tag generated-transaction   ; with --verbose-tags, appears on generated periodic txns
tag modified-transaction    ; with --verbose-tags, appears on txns which have had auto postings added
tag generated-posting       ; with --verbose-tags, appears on generated auto postings
tag cost-posting            ; with --verbose-tags, appears on cost postings
tag conversion-posting      ; with --verbose-tags, appears on conversion postings
tag _generated-transaction  ; always exists on generated periodic txns
tag _modified-transaction   ; always exists on txns which have had auto postings added
tag _generated-posting      ; always exists on generated auto postings
tag _cost-posting           ; exists on postings which have been matched with a nearby @/@@ cost notation
tag _conversion-posting     ; exists on postings which have been matched with a nearby @/@@ cost notation

---

(source_file)

==================
test_1
==================

2020-01-01
  (a)     1
  (a:aa)  1

---

(source_file)

==================
test_2
==================
